Simplify upgrade